fix(ci): align chain Go version and Java 8 URLDecoder usage
Fix build-common compile error on Java 8 and build-chain Docker go mod mismatch with CI.

Co-authored-by: Cursor <cursoragent@cursor.com>